# pgmlink

./: CMakeLists.txt
cmake_extensions/: FindVIGRA.cmake
include/pgmlink/: classifier_auxiliary.h  conservationtracking_parameter.h  constraint_function.hxx  energy_computer.h  event.h  field_of_view.h  hypotheses.h  merger_resolving.h  merger_resolving_grammar.h  nearest_neighbors.h  pgm.h  pgm_chaingraph.h  pgmlink_export.h  randomforest.h  reasoner.h  reasoner_constracking.h  reasoner_pgm.h  structuredLearningTracking.h  tracking.h  traxels.h  uncertaintyParameter.h
include/pgmlink/feature_calculator/: absolute_difference.h  asymmetric_ratio.h  base.h  elementwise_squared_difference.h  helpers.h  identity.h  pairwise_operation.h  ratio.h  square_root_squared_difference.h  squared_difference.h
include/pgmlink/features/: extract_region_features.h  feature.h  feature_calculator.h  feature_extraction.h  featurestore.h  higher_order_features.h  tracking_feature_extractor.h
include/pgmlink/inferencemodel/: constrackinginferencemodel.h  constraint_pool.hxx  flow_constrackinferencemodel.h  inferencemodel.h  structuredlearningtrackinginferencemodel.h
python/: CMakeLists.txt  pypgmlink.cpp.cmake  pytrack.cpp
src/: energy_computer.cpp  hypotheses.cpp  merger_resolving.cpp  pgm_chaingraph.cpp  reasoner_constracking.cpp  reasoner_pgm.cpp  structuredLearningTracking.cpp  tracking.cpp  traxels.cpp
src/inferencemodel/: constrackinginferencemodel.cpp  constraint_pool.cpp  dynprog_constrackinferencemodel.cpp  flow_constrackinferencemodel.cpp  perturbedinferencemodel.cpp  structuredlearningtrackinginferencemodel.cpp
tests/: CMakeLists.txt  constraint_test.cpp  event_serialization_test.cpp  higher_order_features_test.cpp  hypotheses_test.cpp  merger_resolver_test.cpp  reasoner_constracking_test.cpp  reasoner_dyn_prog_constracking_test.cpp  tracking_feature_extractor_test.cpp  uncertainty_test.cpp
